@startuml UIControllersClassDiagram

 package ui {
    
    package "access"{

       interface CookbookAccess {
        + readUser(username: String, password: String): User
        + registerNewUser(username: String, password: String): User
        + updateUserAttributes(user: User): void
}

class LocalCookbookAccess {
  - fileHandler: UserDataFilehandling
  + readUser(username: String, password: String): User
  + registerNewUser(username: String, password: String): User
  + updateUserAttributes(user: User): void
}

class RemoteCookbookAccess {
  - endpointUri: URI
  + readUser(username: String, password: String): User
  + registerNewUser(username: String, password: String): User
  + updateUserAttributes(user: User): void
  - uriParam(s: String): String
  - resolveUriAccounts(uri: String): URI
}

class ServerStatusChecker {
  - endpointUri: String
  - localFilePath: String
  + serverStatus(): Boolean
  + setAccessType(filepath: String): CookbookAccess
}
    }
    
class MainApp {
  + main(args: String[]): void
  + start(primaryStage: Stage): void
}


    class CookbookController{
        - ResourceBundle resources
        - URL location
        - Button addIngredientButton
        - TextField addIngredientNameTextField
        - Button addNewRecipeButton
        - Pane addNewRecipePane
        - TextField amountTextField
        - MenuItem appetizerDropdownButton
        - Button cancelNewRecipeButton
        - Button cancelRandomRecipeButton
        - Button randomRecipeButton
        - Button removeRecipeButton
        - Button addRecipeButton
        - ComboBox<String> categoryCombobox
        - TextField deleteIngredientTextField
        - MenuItem dessertDropdownButton
        - MenuItem dinnerDropdownButton
        - Text headerText
        - ListView<Ingredient> ingredientListView
        - ListView<Recipe> recipeListView
        - Button logOutButton
        - Button randomAppetizerButton
        - Button randomDessertButton
        - Button randomDinnerButton
        - Pane randomRecipePane
        - TextArea randomRecipeTextArea
        - Button removeIngredientButton
        - TextField titleTextField
        - Text deleteRecipeText
        - TextField deleteRecipeTextfield
        - ComboBox<String> unitComboBox
        - Label popupLabel
        - Button appetizerButton
        - Button dinnerButton
        - Button dessertButton
        - Pane mainPagePane
        - Pane ingredientPane
        - Pane searchByIngredientsPane
        - User user
        - UserDataFilehandling fileHandler
        - Recipe tmpRecipe
        + initialize(user: User, fileHandler: UserDataFilehandling): void
        + randomRecipePage(): void
        + initIngredientView(): void
        + addRecipePage(): void
        + searchByIngredientsPage(): void
        + searchByIngredients(): void
        + handleCancel(event: ActionEvent): void
        + updateRecipeListView(): void
        + removeRecipe(event: ActionEvent): void
        + getRecipesByCategory(event: ActionEvent): void
        + getRandomRecipeByCategory(event: ActionEvent): void
        + addIngredient(): void
        + removeIngredient(): void
        + addRecipe(event: ActionEvent): void
        + displayErrorMessage(e: Exception): void
        + getRecipeListView(): List<Recipe>
        + getIngredientListView(): List<Ingredient>
        + getErrorMessage(): String
        + getRandomRecipeText(): String
        + logout(): void
    
    }
    class UserController{
        - ResourceBundle resources
        - URL location
        - Button loginButton
        - PasswordField passwordField
        - Button signupButton
        - TextField usernameField
        - Text outputMessage
        - Label popupLabel
        - UserDataFilehandling fileHandler
        + setFileHandler(fileHandler: UserDataFilehandling): void
        + login(): void
        + signup(): void
        + setStage(stage: Stage): void
        + startApp(user: User): void
        + getErrorMessage(): String
        + displayErrorMessage(e: Exception): void
    }
}

 
CookbookAccess <|.. LocalCookbookAccess
CookbookAccess <|.. RemoteCookbookAccess

@enduml
